Closed
Bug 785001
Opened 11 years ago
Closed 11 years ago
crash in mozilla::layers::PlanarYCbCrImage::CopyData
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
VERIFIED
FIXED
mozilla17
People
(Reporter: scoobidiver, Assigned: kanru)
References
Details
(Keywords: crash, regression, reproducible, Whiteboard: [getUserMedia], [qa!])
Crash Data
Attachments
(1 file)
951 bytes,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
It first appeared in 17.0a1/20120822. The regression window is: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=360ab7771e27&tochange=abc17059522b It's likely a regression from bug 767480. Signature mozilla::layers::CopyPlane More Reports Search UUID 04c4672f-3f15-49df-b8f2-4d9f12120823 Date Processed 2012-08-23 04:36:50 Uptime 184 Last Crash 3.2 minutes before submission Install Age 3.8 hours since version was first installed. Install Time 2012-08-23 00:26:49 Product Firefox Version 17.0a1 Build ID 20120822030558 Release Channel nightly OS Windows NT OS Version 6.1.7601 Service Pack 1 Build Architecture x86 Build Architecture Info GenuineIntel family 6 model 42 stepping 7 Crash Reason EXCEPTION_ACCESS_VIOLATION_READ Crash Address 0x1e906241 AdapterVendorID: 0x10de, AdapterDeviceID: 0x1244, AdapterSubsysID: 519419da, AdapterDriverVersion: 8.17.12.9573 D2D? D2D+ DWrite? DWrite+ D3D10 Layers? D3D10 Layers+ WebGL! EGL? EGL+ GL Context? GL Context+ WebGL+ EMCheckCompatibility True Adapter Vendor ID 0x10de Adapter Device ID 0x1244 Total Virtual Memory 4294836224 Available Virtual Memory 3690061824 System Memory Use Percentage 29 Available Page File 28046094336 Available Physical Memory 12052635648 Frame Module Signature Source 0 xul.dll mozilla::layers::CopyPlane gfx/layers/ImageContainer.cpp:432 1 xul.dll mozilla::layers::PlanarYCbCrImage::CopyData gfx/layers/ImageContainer.cpp:462 2 xul.dll mozilla::layers::PlanarYCbCrImage::SetData gfx/layers/ImageContainer.cpp:476 3 xul.dll mozilla::MediaEngineWebRTCVideoSource::DeliverFrame content/media/webrtc/MediaEngineWebRTCVideo.cpp:75 4 gkmedias.dll webrtc::ViEExternalRendererImpl::RenderFrame media/webrtc/trunk/src/video_engine/vie_renderer.cc:230 5 gkmedias.dll webrtc::IncomingVideoStream::IncomingVideoStreamProcess media/webrtc/trunk/src/modules/video_render/main/source/incoming_video_stream.cc:389 6 gkmedias.dll webrtc::IncomingVideoStream::IncomingVideoStreamThreadFun media/webrtc/trunk/src/modules/video_render/main/source/incoming_video_stream.cc:318 7 gkmedias.dll webrtc::ThreadWindows::Run media/webrtc/trunk/src/system_wrappers/source/thread_win.cc:208 8 gkmedias.dll webrtc::ThreadWindows::StartThread media/webrtc/trunk/src/system_wrappers/source/thread_win.cc:77 9 msvcr100.dll _callthreadstartex f:\dd\vctools\crt_bld\self_x86\crt\src\threadex.c:314 10 msvcr100.dll _threadstartex f:\dd\vctools\crt_bld\self_x86\crt\src\threadex.c:292 11 kernel32.dll BaseThreadInitThunk 12 ntdll.dll __RtlUserThreadStart 13 ntdll.dll _RtlUserThreadStart More reports at: https://crash-stats.mozilla.com/report/list?signature=mozilla%3A%3Alayers%3A%3ACopyPlane https://crash-stats.mozilla.com/report/list?signature=mozilla%3A%3Alayers%3A%3APlanarYCbCrImage%3A%3ACopyData
Assignee | ||
Comment 1•11 years ago
|
||
Looks like it is happening in webrtc rendering. How could I reproduce this?
Reporter | ||
Comment 2•11 years ago
|
||
(In reply to Kan-Ru Chen [:kanru] from comment #1) > Looks like it is happening in webrtc rendering. How could I reproduce this? One comment says: "set media.navigator.enable? to true. Visited a firefox test page to test webcam (logitech c270) output"
Comment 3•11 years ago
|
||
Whoever is crashing in the stack with comments is crashing with: https://people.mozilla.com/~anarayanan/gum_test.html.
![]() |
||
Comment 4•11 years ago
|
||
This was reported in bug 665909 as well (but that's a tracking bug, so the crash is better discussed here), STR seem to be "When I try the Video at the gUM Test Page the browser crashes."
Updated•11 years ago
|
Whiteboard: [getUserMedia]
Comment 5•11 years ago
|
||
When I try the Video at the gUM Test Page the browser crashes. Mac OS X 10.6.8 Browser: 17.0a1 https://crash-stats.mozilla.com/report/index/bp-fa5e2fa6-8717-45fd-a26b-e86432120824
Comment 6•11 years ago
|
||
(In reply to Andy Bajka from comment #5) > When I try the Video at the gUM Test Page the browser crashes. me too. Mac OS X 10.8.1 Browser: 17.0a1 (2012-08-24) https://crash-stats.mozilla.com/report/index/bp-f077dc68-ced8-4771-9152-cf1612120824
Reporter | ||
Updated•11 years ago
|
Keywords: reproducible
Assignee | ||
Comment 7•11 years ago
|
||
Assignee: nobody → kchen
Attachment #655399 -
Flags: review?(roc)
Attachment #655399 -
Flags: review?(roc) → review+
Assignee | ||
Comment 8•11 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/0fdd937d7a81
Comment 9•11 years ago
|
||
I compiled nighly with patch 655399 applied. It now works but but with issues. When I first click the Video button nothing happens, I then click the Stop button then the Video button again. At this point the video plays as expected. At this point clicking the Stop button will stop the video, but the green video LED on my iMac shows the video is still on. Clicking the Video button once more gives an error message HARDWARE_UNAVAILABLE.
Comment 10•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/0fdd937d7a81
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Assignee | ||
Comment 11•11 years ago
|
||
(In reply to Andy Bajka from comment #9) > I compiled nighly with patch 655399 applied. It now works but but with > issues. > > When I first click the Video button nothing happens, I then click the Stop > button then the Video button again. At this point the video plays as > expected. At this point clicking the Stop button will stop the video, but > the green video LED on my iMac shows the video is still on. Clicking the > Video button once more gives an error message HARDWARE_UNAVAILABLE. Hi Andy, this bug is about the crashing when the video is playing. Please file a new bug if you still can't get desired output from getUserMedia, thanks!
Comment 12•11 years ago
|
||
I will file new bug for the other issues. Thank you Kan-Ru.
Updated•11 years ago
|
QA Contact: jsmith
Whiteboard: [getUserMedia] → [getUserMedia], [qa+]
Comment 13•11 years ago
|
||
Verified on Nightly on Windows 7 and OS X 10.8.
Status: RESOLVED → VERIFIED
Whiteboard: [getUserMedia], [qa+] → [getUserMedia], [qa!]
You need to log in
before you can comment on or make changes to this bug.
Description
•