Bug 785001 - Add default constructor to PlanarYCbCrImage::Data. r=roc